...
                .padding(8.dp),
            text = quizItem.answer,
            fontSize =24.sp
        )
        IconButton(
            modifier = Modifier
                .testTag("DeleteQuizItemButton")
                .padding(4.dp)
                .align(alignment = Alignment.CenterHorizontally),
            onClick = { onDeleteButtonClick(quizItem) }
        ) {
            Icon(
                modifier = Modifier
...
