package com.example.quizapp_room.ui.views.home

import androidx.compose.foundation.layout.Arrangement
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.material3.Button
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import androidx.navigation.NavController
import com.example.quizapp_room.ui.components.NavigateButton

@Composable
fun HomeScreen(navController: NavController) {
    Column(
        modifier = Modifier
            .fillMaxSize(),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(24.dp, Alignment.CenterVertically)
    ) {
        NavigateButton(
            modifier = Modifier.testTag("startQuizButton"),
            text = "Start Quiz",
            onClick = { navController.navigate("quiz") }
        )
        NavigateButton(
            modifier = Modifier.testTag("toGalleryButton"),
            text = "To Gallery",
            onClick = { navController.navigate("gallery") }
        )
        NavigateButton(
            text = "Scoreboard",
            onClick = { navController.navigate("scoreBoard") }
        )
    }
}
